--- a/ui/test_window.ui
+++ b/ui/test_window.ui
@@ -60,7 +60,7 @@
            </widget>
           </item>
           <item row="1" column="1">
-           <widget class="QLineEdit" name="w_le_dicom_struct_file">
+           <widget class="QLineEdit" name="w_le_dcm_struct_file">
             <property name="minimumSize">
              <size>
               <width>100</width>
@@ -76,7 +76,7 @@
            </widget>
           </item>
           <item row="1" column="2">
-           <widget class="QPushButton" name="w_pb_dicom_struct_file">
+           <widget class="QPushButton" name="w_pb_dcm_struct_file">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -95,7 +95,7 @@
            </widget>
           </item>
           <item row="0" column="2">
-           <widget class="QPushButton" name="w_pb_dicom_plan_file">
+           <widget class="QPushButton" name="w_pb_dcm_plan_file">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Fixed">
               <horstretch>0</horstretch>
@@ -114,7 +114,7 @@
            </widget>
           </item>
           <item row="0" column="1">
-           <widget class="QLineEdit" name="w_le_dicom_plan_file">
+           <widget class="QLineEdit" name="w_le_dcm_plan_file">
             <property name="minimumSize">
              <size>
               <width>100</width>
@@ -127,7 +127,7 @@
            </widget>
           </item>
           <item row="2" column="1">
-           <widget class="QComboBox" name="w_cb_dicom_color">
+           <widget class="QComboBox" name="w_cb_dcm_color">
             <property name="minimumSize">
              <size>
               <width>100</width>
@@ -137,7 +137,7 @@
            </widget>
           </item>
           <item row="2" column="2">
-           <widget class="QFrame" name="w_dicom_color_frame">
+           <widget class="QFrame" name="w_dcm_color_frame">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
               <horstretch>0</horstretch>
@@ -166,7 +166,7 @@
            </widget>
           </item>
           <item row="3" column="1">
-           <widget class="QSlider" name="w_hs_dicom_transparency">
+           <widget class="QSlider" name="w_hs_dcm_transparency">
             <property name="maximum">
              <number>100</number>
             </property>
@@ -186,7 +186,7 @@
            </widget>
           </item>
           <item row="3" column="2">
-           <widget class="QLabel" name="w_l_dicom_transparency">
+           <widget class="QLabel" name="w_l_dcm_transparency">
             <property name="text">
              <string>100</string>
             </property>
