--- a/ui/main_window.ui
+++ b/ui/main_window.ui
@@ -870,47 +870,10 @@
     </item>
    </layout>
   </widget>
-  <widget class="QMenuBar" name="menubar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>1268</width>
-     <height>33</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="file_menu">
-    <property name="title">
-     <string>&amp;File</string>
-    </property>
-    <addaction name="exit_action"/>
-   </widget>
-   <widget class="QMenu" name="view_menu">
-    <property name="title">
-     <string>&amp;View</string>
-    </property>
-   </widget>
-   <widget class="QMenu" name="options_menu">
-    <property name="title">
-     <string>&amp;Options</string>
-    </property>
-    <addaction name="settings_action"/>
-   </widget>
-   <widget class="QMenu" name="help_menu">
-    <property name="title">
-     <string>&amp;Help</string>
-    </property>
-    <addaction name="about_action"/>
-   </widget>
-   <addaction name="file_menu"/>
-   <addaction name="view_menu"/>
-   <addaction name="options_menu"/>
-   <addaction name="help_menu"/>
-  </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="exit_action">
    <property name="text">
-    <string>&amp;Exit</string>
+    <string>E&amp;xit</string>
    </property>
   </action>
   <action name="settings_action">
